<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="choice_your_nfavorite_coffee">Choice your \nFavorite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="search_anything">Search anything...</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="explore">Explore</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="dollor">$-</string>
</resources>